# log-exceptions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/workflows/: linter.yml  release-notes.yml  tests.yml
news/: 1.feature.1.md  1.feature.md  3.doc.md
src/log_exceptions/: __init__.py  _decorator.py
tests/: test_log_exceptions.py
